Adjusted tox config

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 isolated_build = true
 skip_missing_interpreters = true
 parallel_show_output = true
-envlist = py{310,311,312}-dj{42,50,51,main}
+envlist = py{310,311,312,313}-dj{42,51,52}
 work_dir = {toxinidir}/.dev/.tox
 
 [testenv]
@@ -12,8 +12,8 @@ whitelist_externals =
     rm
 deps =
     dj42: Django>=4.2.0,<5.0
-    dj50: Django>=5.0,<5.1
     dj51: Django>=5.1,<5.2
+    dj52: Django>=5.2,<6.0
     djmain: https://github.com/django/django/archive/main.tar.gz
 setenv =
     DJANGO_SETTINGS_MODULE=tests.settings
