Added Picker model to use in lieu of User

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,9 @@
 isolated_build = true
 skip_missing_interpreters = true
 parallel_show_output = true
-envlist = py{310,311,312,313}-dj{42,51,52}
+envlist = 
+    py{311,312,313}-dj{51,52}
+    py{312,313}-djmain
 work_dir = {toxinidir}/.dev/.tox
 
 [testenv]
@@ -11,7 +13,6 @@ description = Run tests and coverage. Optionally open the coverage reports
 whitelist_externals =
     rm
 deps =
-    dj42: Django>=4.2.0,<5.0
     dj51: Django>=5.1,<5.2
     dj52: Django>=5.2,<6.0
     djmain: https://github.com/django/django/archive/main.tar.gz
@@ -63,6 +64,7 @@ exclude =
 
 [gh-actions]
 python =
-    3.10: py310
     3.11: py311
     3.12: py312
+    3.13: py313
+    3.14: py314
