--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,8 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.11", "3.12", "3.13", "3.14"]
+    env:
+      COVERAGE_OPTIONS: "-a"
     steps:
     - uses: actions/checkout@v5
     - name: Set up Python ${{ matrix.python-version }}
@@ -15,6 +17,15 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install tox tox-gh-actions
+        pip install tox tox-gh-actions coverage
     - name: Test with tox
       run: tox
+    - name: Generate coverage XML report
+      run: coverage xml
+    - name: Codecov
+      uses: codecov/codecov-action@v4
+      env:
+        PYTHON: ${{matrix.python-version}}
+      with:
+        env_vars: PYTHON
+        token: ${{ secrets.CODECOF_TOKEN }}
