--- a/tox.ini
+++ b/tox.ini
@@ -22,32 +22,8 @@ setenv =
     PYTHONPATH={toxinidir}
 commands =
     pip install -e .[test]
-    pytest --cov-config .coveragerc --cov-report html --cov-report term --cov=picker tests
-
-[coverage:run]
-branch = True
-data_file = .dev/.coverage
-omit =  **/migrations/**
-
-[coverage:report]
-# Regexes for lines to exclude from consideration
-exclude_lines =
-    # Have to re-enable the standard pragma
-    pragma: no cover
-    # Don't complain about missing debug-only code:
-    def __repr__
-    if self\.debug
-    # Don't complain if tests don't hit defensive assertion code:
-    raise AssertionError
-    raise NotImplementedError
-    # Don't complain if non-runnable code isn't run:
-    if __name__ == .__main__.:
-
-ignore_errors = True
-
-[coverage:html]
-directory = .dev/coverage
-title = Picker Coverage Report
+    coverage run {env:COVERAGE_OPTIONS:} -m pytest tests
+    coverage report
 
 [pytest]
 DJANGO_SETTINGS_MODULE=tests.settings
